General small changes

--- a/trip_sharing-frontend/public/index.html
+++ b/trip_sharing-frontend/public/index.html
@@ -6,10 +6,11 @@
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     
-    <title>React App</title>
+    <title>TripSharing</title>
   </head>
   <body>
     <noscript>
